--- a/package.json
+++ b/package.json
@@ -4,26 +4,41 @@
   "description": "Test nuxt app for integrating JSS",
   "author": "Sam Garson",
   "private": true,
+  "config": {
+    "appName": "jss-nuxt-test",
+    "rootPlaceholders": [
+      "jss-main"
+    ],
+    "sitecoreDistPath": "/dist/jss-test",
+    "sitecoreConfigPath": "/App_Config/Include/zzz",
+    "buildArtifactsPath": "./dist",
+    "language": "en"
+  },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "NODE_ENV=development nodemon --inspect server/index.js --watch server",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
+    "start": "NODE_ENV=production node server/index.js",
     "generate": "nuxt generate"
   },
   "dependencies": {
     "@sitecore-jss/sitecore-jss": "^11.0.2",
     "@sitecore-jss/sitecore-jss-vue": "^11.0.2",
-    "cross-env": "^5.2.0",
+    "axios": "^0.18.0",
+    "dotenv": "^6.2.0",
     "micro": "^9.3.3",
     "micro-route": "^2.5.0",
     "nuxt": "^2.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/register": "^7.0.0",
     "@sitecore-jss/sitecore-jss-cli": "^11.0.2",
     "@sitecore-jss/sitecore-jss-manifest": "^11.0.2",
     "@sitecore-jss/sitecore-jss-proxy": "^11.0.2",
     "@sitecore-jss/sitecore-jss-update-package": "^11.0.2",
     "@sitecore-jss/sitecore-pipelines": "^11.0.2",
+    "cors": "^2.8.5",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.9"
   }
 }
